samples/_failures_safe/1761447677_154488_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_519effd6.c: In function ‘main’:
./samples/SAFE/__tmp_519effd6.c:133:17: error: expected declaration or statement at end of input
  133 |                 result[i][j] = 0;
      |                 ^~~~~~
./samples/SAFE/__tmp_519effd6.c:133:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_519effd6.c:133:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_519effd6.c:133:17: error: expected declaration or statement at end of input
